syntax = "proto3";

option go_package = "../gen;coursev1";

import "google/protobuf/empty.proto";

service CourseService {
    rpc GetAll(google.protobuf.Empty) returns (GetResponse); 
    rpc Get(GetCourseRequest) returns (GetCourseResponse); 
    rpc Create(CreateRequest) returns (SuccessResponse);
    rpc Delete(DeleteCourseRequest) returns (SuccessResponse);
    rpc Update(UpdateCourseRequest) returns (SuccessResponse);
}


message CreateLesson {
    string title = 1; 
    string type = 2;
    int32 duration = 3; 
    string content = 4; 
    string task = 6; 
}

message CreateTheme {
    string title = 1; 
    repeated CreateLesson lessons = 2; 
}

message CreateRequest {
    string title = 1;  
    string description = 2;  
    string full_description = 3;  
    string work = 4;  
    string difficulty = 5; 
    int32 duration = 6;  
    string image = 7;
    repeated CreateTheme themes = 8;  
}

message Course {
    int32 id = 1;
    string title = 2;  
    string description = 3;  
    string full_description = 4;  
    string work = 5;  
    string difficulty = 6; 
    int32 duration = 7;  
    string image = 8;
}

message GetResponse {
    repeated Course courses = 1;
}

message SuccessResponse {
    bool success = 1;  
}

message GetCourseRequest {
    int32 id = 1;
}

message Lesson {
    int32 id = 1;
    string title = 2; 
    string type = 3;
    int32 duration = 4; 
    string content = 5; 
    string task = 7; 
}

message Theme {
    int32 id = 1;
    string title = 2; 
    repeated Lesson lessons = 3; 
}

message GetCourseResponse {
    int32 id = 1;
    string title = 2;  
    string description = 3;  
    string full_description = 4;  
    string work = 5;  
    string difficulty = 6; 
    int32 duration = 7;  
    string image = 8;
    repeated Theme themes = 9;
}

message DeleteCourseRequest {
    int32 id = 1;
}

message UpdateLesson {
    optional int32 id = 1;
    string title = 2; 
    string type = 3;
    int32 duration = 4; 
    string content = 5; 
    string task = 7; 
}

message UpdateTheme {
    optional int32 id = 1;
    string title = 2; 
    repeated UpdateLesson lessons = 3; 
}

message UpdateCourseRequest {
    int32 id = 1;
    string title = 2;  
    string description = 3;  
    string full_description = 4;  
    string work = 5;  
    string difficulty = 6; 
    int32 duration = 7;  
    string image = 8;
    repeated UpdateTheme themes = 9;
}